// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Login Screen renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#004D40",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../resources/Logo.png",
      }
    }
    style={
      Object {
        "height": "30%",
        "marginTop": "8%",
        "resizeMode": "contain",
        "width": "60%",
      }
    }
  />
  <View
    style={
      Object {
        "marginBottom": "8%",
        "width": "65%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Roboto",
          "fontSize": 17,
          "marginBottom": "4%",
          "textAlign": "center",
        }
      }
    >
      Your first time at the ValueTown?
    </Text>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 5,
            "elevation": 3,
            "fontSize": 16,
            "justifyContent": "center",
            "padding": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#004D40",
              "fontFamily": "Roboto",
            }
          }
        >
          CONTINUE AS NEW USER
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing Login Screen renders correctly after login error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#004D40",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../resources/Logo.png",
      }
    }
    style={
      Object {
        "height": "30%",
        "marginTop": "8%",
        "resizeMode": "contain",
        "width": "60%",
      }
    }
  />
  <View
    style={
      Object {
        "marginBottom": "8%",
        "width": "65%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Roboto",
          "fontSize": 17,
          "marginBottom": "4%",
          "textAlign": "center",
        }
      }
    >
      fake-failure occurred
    </Text>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 5,
            "elevation": 3,
            "fontSize": 16,
            "justifyContent": "center",
            "padding": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#004D40",
              "fontFamily": "Roboto",
            }
          }
        >
          TRY AGAIN
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing Login Screen renders correctly when logging in and waiting 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#004D40",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
    }
  }
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      style={
        Object {
          "backgroundColor": "#004D40E9",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#FFFFFF"
        hidesWhenStopped={true}
        size="large"
      />
    </View>
  </Modal>
  <Image
    source={
      Object {
        "testUri": "../../../resources/Logo.png",
      }
    }
    style={
      Object {
        "height": "30%",
        "marginTop": "8%",
        "resizeMode": "contain",
        "width": "60%",
      }
    }
  />
  <View
    style={
      Object {
        "marginBottom": "8%",
        "width": "65%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Roboto",
          "fontSize": 17,
          "marginBottom": "4%",
          "textAlign": "center",
        }
      }
    >
      Your first time at the ValueTown?
    </Text>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 5,
            "elevation": 3,
            "fontSize": 16,
            "justifyContent": "center",
            "padding": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#004D40",
              "fontFamily": "Roboto",
            }
          }
        >
          CONTINUE AS NEW USER
        </Text>
      </View>
    </View>
  </View>
</View>
`;
